# scribe

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  decs.d.ts  lint-staged.config.js  package.json  pnpm-lock.yaml  pyproject.toml  rollup.config.js  tailwind.config.js  tsconfig.json  vitest.config.ts
.github/workflows/: lint.yml  tests.yml
backend/src/hotapi/: main.py
backend/src/hotapi/models/: models.py
backend/src/hotapi/routers/: pages.py
backend/src/scribe/: __init__.py  dependencies.py  exceptions.py  main.py
backend/src/scribe/auth/: auth.py
backend/src/scribe/config/: __init__.py  logs.py  settings.py
backend/src/scribe/models/: models.py
backend/src/scribe/routers/: pages.py
backend/src/scribe/session/: session.py
backend/src/scribe/slack/: slack.py
backend/src/scribe/text/: text.py  transcription.py
backend/test/: conftest.py  mocks.py
backend/test/resources/: not_audio.txt
backend/test/unit/: test_dependencies.py
backend/test/unit/routers/: test_pages.py
backend/test/unit/session/: test_session.py
backend/test/unit/text/: test_text.py
frontend/src/: index.ts
frontend/src/controllers/: add-todo-controller.ts  combobox.ts  language-toggle.ts  notification.ts  publish-options.ts  recorder.ts  recording.ts  transcription.ts
frontend/test/: README.md  notification.test.ts  transcription.test.ts
templates/components/: combobox.html.j2  language_settings.html.j2  language_toggle.html.j2  loading_overlay.html.j2  notification.html.j2  publish_options.html.j2  recorder.html.j2  recorder_controller.html.j2  recording.html.j2  todo.html.j2  todos.html.j2  touch_target.html.j2  transcription.html.j2
templates/frames/: todos.html.j2
templates/layout/: base.html.j2  footer.html.j2  header.html.j2
templates/pages/: home.html.j2  login.html.j2  tests.html.j2
templates/streams/: add_todo.html.j2  message_published.html.j2  send_notification.html.j2  transcription_complete.html.j2  upload_audio.html.j2
