[tool.poetry]
name = "operation-hotapi"
version = "0.1.0"
description = "A fullstack micro-framework using FastAPI and Hotwire"
authors = ["Shane Scanlon <shane@turtlestack.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hotapi", from = "backend/src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
Jinja2 = "^3.1.2"
pydantic = "^2.5.2"
python-multipart = "^0.0.6"
isort = "^5.13.2"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.25.2"
black = "^23.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
